<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.application.bank.ui.statement.StatementViewModel" />

        <variable
            name="user"
            type="com.application.bank.data.network.response.UserAccount" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:fontFamily="sans-serif-light"
            android:padding="@dimen/dimen_padding_20dp"
            android:text="@{user.name}"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="jelly_bean"
            tools:text="Baranidharan M" />

        <TextView
            android:id="@+id/account_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:fontFamily="sans-serif-light"
            android:paddingStart="20dp"
            android:paddingTop="@dimen/padding_12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="@dimen/padding_12dp"
            android:text="@string/account_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/account_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:fontFamily="sans-serif-light"
            android:paddingStart="@dimen/dimen_padding_20dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingEnd="@dimen/dimen_padding_20dp"
            android:paddingBottom="@dimen/dimen_8dp"
            android:text="@{user.bankAccount + ` / ` + user.agency}"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="@{user.bankAccount != null ? View.VISIBLE: View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_text"
            tools:targetApi="jelly_bean"
            tools:text="2050 / 0123456789" />

        <TextView
            android:id="@+id/balance_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:fontFamily="sans-serif-light"
            android:paddingStart="@dimen/dimen_padding_20dp"
            android:paddingTop="@dimen/padding_12dp"
            android:paddingEnd="@dimen/dimen_padding_20dp"
            android:paddingBottom="@dimen/padding_12dp"
            android:text="@string/balance_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_details"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/balance_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:fontFamily="sans-serif-light"
            android:paddingStart="@dimen/dimen_padding_20dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingEnd="@dimen/dimen_padding_20dp"
            android:paddingBottom="@dimen/padding_12dp"
            android:text="@{`R$ ` + String.valueOf(user.balance)}"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balance_text"
            tools:targetApi="jelly_bean"
            tools:text="RS 1.000,00" />

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="@dimen/dimen_padding_20dp"
            android:layout_height="@dimen/dimen_padding_20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="32dp"
            android:background="?actionBarItemBackground"
            android:clickable="true"
            android:contentDescription="@string/logout"
            android:focusable="true"
            android:onClick="@{()->viewModel.logOut()}"
            android:scaleType="centerInside"
            android:src="@drawable/logout"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{user.name == null ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/recent_section"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                layout="@layout/layout_placeholder_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <TextView
            android:id="@+id/recent_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_padding_20dp"
            android:paddingLeft="@dimen/dimen_padding_20dp"
            android:paddingTop="@dimen/padding_10dp"
            android:paddingEnd="@dimen/dimen_padding_20dp"
            android:paddingBottom="@dimen/padding_10dp"
            android:text="@string/recent"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balance_value" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/statement_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recent_section"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>